# llm_security

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/middleware/: auth.py  rate_limiter.py
app/models/: request.py
app/rag/: spotlighting.py  vectorstore.py
app/rag/documents/: financial_report.txt  hr_policy.txt  it_handbook.txt  product_specs.txt
app/routes/: auth.py  chat.py
app/security/: content_moderation.py  input_guard.py  input_restructuring.py  output_validator.py  system_prompt.py  token_budget.py
app/services/: llm_service.py
chroma_data/: chroma.sqlite3
tests/: TestInputRestructuring.py  test_auth.py  test_input_validation.py  test_output_validation.py  test_rag_spotlighting.py  test_system_prompt.py
tmp_chroma_probe_2/: chroma.sqlite3
